--- a/index.html
+++ b/index.html
@@ -4,10 +4,10 @@
     <title>Dahlems R Us</title>
   </head>
   <body style="background-color:powderblue; color:blue; font-family:comic sans MS">
-    <h1 style="text-align:center, font-size:300%">Dahlems R Us</h1>
+    <h1 style="text-align:center; font-size:800%">Dahlems R Us</h1>
     <table>
       <tr>
-        <h3 style="font-size:100%">Buy Dahlems Here:</h3>
+        <h3 style="font-size500%">Buy Dahlems Here:</h3>
       </tr>
     </table>
     <table>
