--- a/index.html
+++ b/index.html
@@ -2,12 +2,13 @@
 <html>
   <head>
     <title>Dahlems R Us</title>
+     <link rel="stylesheet" href="styles.css">
   </head>
   <body style="background-color:powderblue; color:blue; font-family:comic sans MS">
-    <h1 style="text-align:center; font-size:800%">Dahlems R Us</h1>
+    <b style="text-align:center; font-size:600%">Dahlems R Us</b>
     <table>
       <tr>
-        <h3 style="font-size500%">Buy Dahlems Here:</h3>
+        <h3 style="font-size:400%">Buy Dahlems Here:</h3>
       </tr>
     </table>
     <table>
