--- a/index.html
+++ b/index.html
@@ -5,10 +5,10 @@
      <link rel="stylesheet" href="styles.css">
   </head>
   <body style="background-color:powderblue; color:blue; font-family:comic sans MS">
-    <b style="text-align:center; font-size:600%">Dahlems R Us</b>
+    <h1 style="text-align:center; font-size:600%"><b>Dahlems R Us</b></h1>
     <table>
       <tr>
-        <h3 style="font-size:400%">Buy Dahlems Here:</h3>
+        <h3 style="font-size:200%">Buy Dahlems Here:</h3>
       </tr>
     </table>
     <table>
