--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <h3 style="font-size:200%">Buy Dahlems Here:</h3>
       </tr>
     </table>
-    <table>
+    <table style="text-align:center;">
       <tr>
         <td><ul>
             <li><button>Dank Dahlem 1</button>
