--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <h3 style="font-size:200%">Buy Dahlems Here:</h3>
       </tr>
     </table>
-    <table style="text-align:center;">
+    <table style="text-align:center; font-size:150%">
       <tr>
         <td><ul>
             <li><button>Dank Dahlem 1</button>
@@ -26,11 +26,11 @@
             </ul></td>
       </tr>
     </table>
-    <form action="https://www.cusd80.com/Domain/8125" method="get">
+    <form style="font-size:1500%" action="https://www.cusd80.com/Domain/8125" method="get">
       Quantity<input type="text" name="fname">
-      <input type="submit" value="Submit">
+      <input style="font-size:150%" type="submit" value="Submit">
     </form> <br>
-    <button id="demo" onclick="myFunction()">Prasie SNAH</button>
+    <button style="font-size:150%" id="demo" onclick="myFunction()">Prasie SNAH</button>
     <script>
         function myFunction() {
             <var>counter</var>
