--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
       </tr>
     </table>
     <form style="font-size:1500%" action="https://www.cusd80.com/Domain/8125" method="get">
-      Quantity<input type="text" name="fname">
+      Quantity<input type="text" name="fname"> <br>
       <input style="font-size:150%" type="submit" value="Submit">
     </form> <br>
     <button style="font-size:150%" id="demo" onclick="myFunction()">Prasie SNAH</button>
