--- a/index.html
+++ b/index.html
@@ -8,17 +8,17 @@
     <h1 style="text-align:center; font-size:600%"><b>Dahlems R Us</b></h1>
     <table>
       <tr>
-        <h3 style="font-size:200%">Buy Dahlems Here:</h3>
+        <h3 style="font-size:350%">Buy Dahlems Here:</h3>
       </tr>
     </table>
-    <table style="text-align:center; font-size:150%">
+    <table style="text-align:center; font-size:200%">
       <tr>
-        <td><ul>
+        <td><ul style="text-align:center">
             <li><button>Dank Dahlem 1</button>
             </li> <br>
             <img  src="https://www.cusd80.com/cms/lib/AZ01001175/Centricity/Domain/7016/dahlemb.jpg" alt="Dank 1" width="200">
             </ul></td>
-        <td><ul>
+        <td><ul style="text-align:center">
                 <li>
     <button>Dank Dahlem 2</button>
                 </li> <br>
@@ -26,11 +26,11 @@
             </ul></td>
       </tr>
     </table>
-    <form style="font-size:1500%" action="https://www.cusd80.com/Domain/8125" method="get">
+    <form style="font-size:200%" action="https://www.cusd80.com/Domain/8125" method="get">
       Quantity<input type="text" name="fname"> <br>
-      <input style="font-size:150%" type="submit" value="Submit">
+      <input style="font-size:200%" type="submit" value="Submit">
     </form> <br>
-    <button style="font-size:150%" id="demo" onclick="myFunction()">Prasie SNAH</button>
+    <button style="font-size:200%" id="demo" onclick="myFunction()">Prasie SNAH</button>
     <script>
         function myFunction() {
             <var>counter</var>
