--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
      <link rel="stylesheet" href="styles.css">
   </head>
   <body style="background-color:powderblue; color:blue; font-family:comic sans MS">
-    <h1 style="text-align:center; font-size:600%"><b>Dahlems R Us</b></h1>
+    <h1 style="text-align:center; font-size:600%"><ins>Dahlems R Us</ins></h1>
     <table>
       <tr>
         <h3 style="font-size:350%">Buy Dahlems Here:</h3>
