--- a/index.html
+++ b/index.html
@@ -14,11 +14,11 @@
     <table style=" font-size:200%">
       <tr>
         <td><ul align:center>
-            <li><button style="text-align:center;">Dank Dahlem 1</button>
+            <li><button align="center;">Dank Dahlem 1</button>
             </li> <br>
-            <img style="text-align:center;" src="https://www.cusd80.com/cms/lib/AZ01001175/Centricity/Domain/7016/dahlemb.jpg" alt="Dank 1" width="200">
+            <img align="center;" src="https://www.cusd80.com/cms/lib/AZ01001175/Centricity/Domain/7016/dahlemb.jpg" alt="Dank 1" width="200">
             </ul></td>
-        <td><ul align:center>
+        <td><ul "align:center;">
                 <li>
     <button>Dank Dahlem 2</button>
                 </li> <br>
