--- a/index.html
+++ b/index.html
@@ -26,14 +26,23 @@
             </ul></td>
       </tr>
     </table>
+    <label for="qty"><abbr title="Quantity">Qty</abbr></label>
+        <input id="qty" value="0" />
+        <button id="down" onclick="modify_qty(-1)">-1</button>
+        <button id="up" onclick="modify_qty(1)">+1</button>
     <form style="font-size:100%" action="https://www.cusd80.com/Domain/8125" method="get">
       Quantity<input type="text" name="fname">
       <input style="font-size:100%" type="submit" value="Submit">
     </form> <br>
+    <label for="qty"><abbr title="Praise SNAH">Qty</abbr></label>
+        <input id="qty" value="0" />
+        <button id="down" onclick="modify_qty(-1)">-1</button>
+        <button id="up" onclick="modify_qty(1)">Praise SNAH</button>
     <button style="font-size:100%" id="demo" onclick="myFunction()">Prasie SNAH</button>
     <script>
         function myFunction() {
             <var>counter</var>
+          
             
         }
 </script>
