--- a/index.html
+++ b/index.html
@@ -2,7 +2,8 @@
 <html>
   <head>
     <title>Dahlems R Us</title>
-     <link rel="stylesheet" href="styles.css">
+    <script type="text/javascript" src="script.js"></script>
+    <link rel="stylesheet" type="text/css" href="style.css"> 
   </head>
   <body style="background-color:powderblue; color:blue; font-family:comic sans MS">
     <h1 style="text-align:center; font-size:600%"><ins>Dahlems R Us</ins></h1>
