--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 
         <input id="qty" value="0" />
         <button id="up" onclick="modify_qty(1)">Praise SNAH</button>
-          
+          <p id="demo"></p>
             
         }
 </script>
