--- a/index.html
+++ b/index.html
@@ -33,8 +33,10 @@
       <input style="font-size:100%" type="submit" value="Submit">
     </form> <br>
 
-        <input id="qty" value="0" />
-        <button id="up" onclick="modify_qty(1)">Praise SNAH</button>
-         
+    <label for="qty">Quantity</label>
+    <input id="qty" value="1" />
+    <button>Bad SNAH</button>
+    <button>Praise SNAH</button>
+
   </body>
 </html>
