--- a/index.html
+++ b/index.html
@@ -42,8 +42,8 @@ function myFunction() {
     var str = "Free Web Building Tutorials!";
     var result = str.link("https://www.youtube.com/user/bluedefil");
     document.getElementById("demo").innerHTML = result;
-var add = (function () {
-    var counter = 0;
+var1 add = (function () {
+    var1 counter = 0;
     return function () {return counter += 1;}
 })();
     document.getElementById("demo").innerHTML = add();
