--- a/index.html
+++ b/index.html
@@ -42,10 +42,8 @@ function myFunction() {
     var str = "Free Web Building Tutorials!";
     var result = str.link("https://www.youtube.com/user/bluedefil");
     document.getElementById("demo").innerHTML = result;
-var1 add = (function () {
     var1 counter = 0;
-    return function () {return counter += 1;}
-})();
+    return var1 {return counter += 1;}
     document.getElementById("demo").innerHTML = add();
 }
 </script>
