--- a/index.html
+++ b/index.html
@@ -6,6 +6,21 @@
     <link rel="stylesheet" type="text/css" href="style.css"> 
   </head>
   <body style="background-color:powderblue; color:blue; font-family:comic sans MS">
+    <div id="menubar"><ul>
+      <li><a href="index.html">Home</a></li>
+      <li><a href="bio.html">Biography</a></li>
+      <li>Class Projects
+        <ul>
+        <li><a href="breakout.html">Breakout</a></li>
+      <li><a href="calculator.html">Calculator</a></li>
+          <li><a href="chalkboard.html">Chalkboard</a></li>
+          <li><a href="fancymultiplication.html">Fancy Multiplication</a></li>
+          <li><a href="htmltest.html">Test</a></li>
+          <li><a href="javaEvent.html">Java Event</a></li>
+          <li><a href="multiplication.html">Multiplication</a></li>
+          <li><a href="popup.html">Pop-Up</a></li>
+          <li><a href="tic-tac-toe.html">Tic-Tac-Toe</a></li>
+          <li><a href="todolist.html">To Do List</a></li></ul></li></ul></div>
     <h1 style="text-align:center; font-size:600%"><ins>Dahlems R Us</ins></h1>
     <table>
       <tr>
