--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <title>Dahlems R Us</title>
     <script type="text/javascript" src="script.js"></script>
     <link rel="stylesheet" type="text/css" href="style.css"> 
+    <link rel="stylesheet" type="text/css" href="sitemap.css">
   </head>
   <body style="background-color:powderblue; color:blue; font-family:comic sans MS">
     <div id="menubar"><ul>
