--- a/javaEvent.html
+++ b/javaEvent.html
@@ -4,7 +4,7 @@
 		<title>JavaScript Events</title>
 		<script>
 			function clicked() {
-				alert("HOW DARE YOU");
+				alert("SNAH Nation thanks you!");
 			}	
 		</script>
                 <link rel="stylesheet" type="text/css" href="style.css">
@@ -20,7 +20,7 @@
 
 
 	<body>
-		<span onclick="clicked();"><h1>Click and Harambe dies.</h1></span>
+		<span onclick="clicked();"><h1>Praise SNAH!.</h1></span>
                 
 	</body>
 </html>
