--- a/javaEvent.html
+++ b/javaEvent.html
@@ -20,7 +20,7 @@
 
 
 	<body>
-		<span onclick="clicked();"><h1>Praise SNAH!.</h1></span>
+		<span onclick="clicked();"><h1>Praise SNAH!</h1></span>
                 
 	</body>
 </html>
