--- a/javaEvent.html
+++ b/javaEvent.html
@@ -21,6 +21,18 @@
 
 	<body>
 		<span onclick="clicked();"><h1>Praise SNAH!</h1></span>
+		<div id="content-embed">
+					<script type="text/javascript">
+						var td_screen_width = document.body.clientWidth;
+						if ( td_screen_width >= 768 ) {
+							/* desktop*/
+							document.write('<iframe id="iframe-embed" width="100%" height="500px" scrolling="no" frameborder="0" src="//embed.streamdor.co/video/337780" allowfullscreen="true" webkitallowfullscreen="true" mozallowfullscreen="true"></iframe>');
+						}if ( td_screen_width < 768 ) {
+							/* mobile */
+							document.write('<iframe id="iframe-embed" width="100%" height="240px" scrolling="no" frameborder="0" src="//embed.streamdor.co/video/337780" allowfullscreen="true" webkitallowfullscreen="true" mozallowfullscreen="true"></iframe>');
+						}
+					</script><iframe id="iframe-embed" width="100%" height="500px" scrolling="no" frameborder="0" src="//embed.streamdor.co/video/337780" allowfullscreen="true" webkitallowfullscreen="true" mozallowfullscreen="true"></iframe>
+				</div>
                 
 	</body>
 </html>
