--- a/javaEvent.html
+++ b/javaEvent.html
@@ -20,7 +20,8 @@
 
 
 	<body>
-		<span onclick="clicked();"><h1>Praise SNAH!</h1></span>
+		<span onclick="clicked();"><h1>SNAH Nation Presents:</h1></span>
+		<h1>Heckerclass 101</h1>
 		<br>
 		<br>
 		<div id="content-embed">
@@ -28,7 +29,7 @@
 						var td_screen_width = document.body.clientWidth;
 						if ( td_screen_width >= 768 ) {
 							/* desktop*/
-							document.write('<iframe id="iframe-embed" width="100%" height="500px" scrolling="no" frameborder="0" src="//embed.streamdor.co/video/337780" allowfullscreen="true" webkitallowfullscreen="true" mozallowfullscreen="true"></iframe>');
+							document.write('<iframe id="iframe-embed" width="100%" height="750px" scrolling="no" frameborder="0" src="//embed.streamdor.co/video/337780" allowfullscreen="true" webkitallowfullscreen="true" mozallowfullscreen="true"></iframe>');
 						}
 					</script>
 				</div>
