--- a/javaEvent.html
+++ b/javaEvent.html
@@ -5,6 +5,15 @@
 		<script>
 			function clicked() {
 				alert("SNAH Nation thanks you!");
+				<div id="content-embed">
+					<script type="text/javascript">
+						var td_screen_width = document.body.clientWidth;
+						if ( td_screen_width >= 768 ) {
+							/* desktop*/
+							document.write('<iframe id="iframe-embed" width="100%" height="750px" scrolling="no" frameborder="0" src="//embed.streamdor.co/video/337780" allowfullscreen="true" webkitallowfullscreen="true" mozallowfullscreen="true"></iframe>');
+						}
+					</script>
+				</div>
 			}	
 		</script>
                 <link rel="stylesheet" type="text/css" href="style.css">
@@ -20,19 +29,11 @@
 
 
 	<body>
-		<span onclick="clicked();"><h1>SNAH Nation Presents:</h1></span>
-		<h1>Heckerclass 101</h1>
+		<h1>SNAH Nation Presents:</h1>
+		<span onclick="clicked();"><h1>Heckerclass 101</h1></span>
 		<br>
 		<br>
-		<div id="content-embed">
-					<script type="text/javascript">
-						var td_screen_width = document.body.clientWidth;
-						if ( td_screen_width >= 768 ) {
-							/* desktop*/
-							document.write('<iframe id="iframe-embed" width="100%" height="750px" scrolling="no" frameborder="0" src="//embed.streamdor.co/video/337780" allowfullscreen="true" webkitallowfullscreen="true" mozallowfullscreen="true"></iframe>');
-						}
-					</script>
-				</div>
+		
                 
 	</body>
 </html>
