--- a/javaEvent.html
+++ b/javaEvent.html
@@ -4,7 +4,7 @@
 		<title>JavaScript Events</title>
 		<script>
 			function clicked() {
-				alert("SNAH Nation thanks you!");
+				alert("SNAH Nation thanks you!")
 				<div id="content-embed">
 					<script type="text/javascript">
 						var td_screen_width = document.body.clientWidth;
