--- a/javaEvent.html
+++ b/javaEvent.html
@@ -34,6 +34,18 @@
 						}
 					</script>
 				</div>
+		<div style="padding-top: 20px; padding-bottom: 20px; text-align: center;">
+<object codebase="http://download.macromedia.com/pub/shockwave/cabs/flash/swflash.cab#version=9,0,0,0" classid="clsid:d27cdb6e-ae6d-11cf-96b8-444553540000" align="middle" height="300px" width="400px">
+<param name="movie" value="/uploads/1/0/8/6/10865538/cubefield.swf"> 
+<param name="quality" value="high"> 
+<param name="play" value="true"> 
+<param name="loop" value="true"> 
+<param name="wmode" value="transparent"> 
+<param name="allowFullScreen" value="true"> 
+<param name="flashvars" value=""> 
+<embed src="/uploads/1/0/8/6/10865538/cubefield.swf" quality="high" pluginspage="http://www.macromedia.com/go/getflashplayer" play="true" loop="true" wmode="transparent" allowfullscreen="true" flashvars="" type="application/x-shockwave-flash" align="middle" height="300px" width="400px">
+</object>
+</div>
 		
                 
 	</body>
