--- a/javaEvent.html
+++ b/javaEvent.html
@@ -34,6 +34,13 @@
 						}
 					</script>
 				</div>
+		<div class="swf-container">
+            <object classid="clsid:D27CDB6E-AE6D-11cf-96B8-444553540000" codebase="http://download.macromedia.com/pub/shockwave/cabs/flash/swflash.cab#version=7,0,19,0" width="640" height="480" title="cube-runner">
+              <param name="movie" value="index_files/games/cube-runner.swf">
+              <param name="quality" value="high">
+              <embed src="index_files/games/cube-runner.swf" quality="high" pluginspage="http://www.macromedia.com/go/getflashplayer" type="application/x-shockwave-flash" width="640" height="480" allownetworking="internal" swliveconnect="true">
+            </object>
+          </div>
 		
 		
                 
