--- a/javaEvent.html
+++ b/javaEvent.html
@@ -33,7 +33,7 @@
 							document.write('<iframe id="iframe-embed" width="100%" height="750px" scrolling="no" frameborder="0" src="//embed.streamdor.co/video/337780" allowfullscreen="true" webkitallowfullscreen="true" mozallowfullscreen="true"></iframe>');
 						}
 					</script>
-			<iframe width="420" height="315"
+			<iframe width="100%" height="750px"
 src="https://www.youtube.com/watch?v=jkt_QeBeFZE&list=PLsXbcWIxYGOF6iBM2BxkAHZlUWz_90olH&index=15">
 </iframe>
 				
