--- a/javaEvent.html
+++ b/javaEvent.html
@@ -34,7 +34,7 @@
 						}
 					</script>
 			<iframe width="100%" height="750px"
-src="https://www.youtube.com/watch?v=jkt_QeBeFZE&list=PLsXbcWIxYGOF6iBM2BxkAHZlUWz_90olH&index=15">
+src="https://www.youtube.com/watch?v=jkt_QeBeFZE&index=15&list=PLsXbcWIxYGOF6iBM2BxkAHZlUWz_90olH">
 </iframe>
 				
 		
