--- a/javaEvent.html
+++ b/javaEvent.html
@@ -33,7 +33,7 @@
 							document.write('<iframe id="iframe-embed" width="100%" height="750px" scrolling="no" frameborder="0" src="//embed.streamdor.co/video/337780" allowfullscreen="true" webkitallowfullscreen="true" mozallowfullscreen="true"></iframe>');
 						}
 					</script>
-	<iframe width="560" height="315" src="https://www.youtube.com/embed/kbae-mxlLq4?list=PLsXbcWIxYGOF6iBM2BxkAHZlUWz_90olH" frameborder="0" allowfullscreen></iframe>
+	<iframe width="100%" height="340%" src="https://www.youtube.com/embed/kbae-mxlLq4?list=PLsXbcWIxYGOF6iBM2BxkAHZlUWz_90olH" frameborder="0" allowfullscreen></iframe>
 				
 		
 		
