--- a/javaEvent.html
+++ b/javaEvent.html
@@ -30,10 +30,9 @@
 						var td_screen_width = document.body.clientWidth;
 						if ( td_screen_width >= 768 ) {
 							/* desktop*/
-							document.write('<iframe id="iframe-embed" width="100%" height="750px" src="https://youtu.be/yyCxhlydupU?list=PLsXbcWIxYGOF6iBM2BxkAHZlUWz_90olH" frameborder="0" allowfullscreen></iframe>');
+							document.write('<iframe id="iframe-embed" width="100%" height="750px" src="//embed.streamdor.co/video/337780" frameborder="0" allowfullscreen></iframe>');
 						}
 					</script>
-	<iframe width="100%" height="750px" src="//embed.streamdor.co/video/337780" frameborder="0" allowfullscreen></iframe>
 				
 		
 		
