--- a/javaEvent.html
+++ b/javaEvent.html
@@ -1,6 +1,7 @@
 <!doctype html>
 <html>
 	<head>
+		<meta charset="utf-8">
 		<title>JavaScript Events</title>
 		<script>
 			function clicked() {
@@ -10,6 +11,7 @@
 		</script>
                 <link rel="stylesheet" type="text/css" href="style.css">
                        <link rel="stylesheet" type="text/css" href="sitemap.css">
+		<link rel="stylesheet" type="text/css" href="CSSedit.css">
 
 
 <script src="sitemap.js"></script>
@@ -37,7 +39,17 @@
 			
 		
 	
-		
+		<script type="text/javascript" src="Blackjack.js">
+</script>
+
+<h1>Javascript Blackjack</h1>
+
+    <p>Player's Hand: </p>
+        <br>
+    <p>Dealer's Score: </p>
+    <p>Player's Score: </p>
+        <br>
+    <p>Game Results: </p>
 		
                 
 	</body>
