--- a/javaEvent.html
+++ b/javaEvent.html
@@ -11,7 +11,6 @@
 		</script>
                 <link rel="stylesheet" type="text/css" href="style.css">
                        <link rel="stylesheet" type="text/css" href="sitemap.css">
-		<link rel="stylesheet" type="text/css" href="CSSedit.css">
 
 
 <script src="sitemap.js"></script>
@@ -42,7 +41,7 @@
 		<script type="text/javascript" src="Blackjack.js">
 </script>
 
-<h1>Javascript Blackjack</h1>
+<h1>Blackjack</h1>
 
     <p>Player's Hand: </p>
         <br>
