--- a/javaEvent.html
+++ b/javaEvent.html
@@ -43,12 +43,12 @@
 
 <h1>Blackjack</h1>
 
-    <p>Player's Hand: </p>
-        <br>
-    <p>Dealer's Score: </p>
-    <p>Player's Score: </p>
-        <br>
-    <p>Game Results: </p>
+<div id="dealerHand"></div>
+<div id="yourHand"></div>
+<div id="yourScore">Your Score: <span class="digits">0</span> Record: <span id="wins">0</span>&nbsp;/&nbsp;<span id="losses">0</span></div>
+<button id="deal">Deal</button>
+<button id="hitMe">Hit</button>
+<button id="stand">Stand</button>
 		
                 
 	</body>
