--- a/javaEvent.html
+++ b/javaEvent.html
@@ -10,10 +10,12 @@
 			}	
 		</script>
                 <link rel="stylesheet" type="text/css" href="style.css">
+
                        <link rel="stylesheet" type="text/css" href="sitemap.css">
 
 
 <script src="sitemap.js"></script>
+		<script src="Blackjack.js"></script>
         <link rel="stylesheet" type="text/css" href="sitemap.css">
     </head>
     <body onload="buildMap('menubar');">
@@ -38,7 +40,7 @@
 			
 		
 	
-		<script type="text/javascript" src="Blackjack.js">
+		
 
 
 <h1>Blackjack</h1>
@@ -49,7 +51,7 @@
 <button id="deal">Deal</button>
 <button id="hitMe">Hit</button>
 <button id="stand">Stand</button>
-		</script>
+		
                 
 	</body>
 </html>
