--- a/javaEvent.html
+++ b/javaEvent.html
@@ -26,14 +26,13 @@
 
 
 	<body>
-		<h1>SNAH Nation Presents:</h1>
-		<span onclick="clicked();"><h1>Heckerclass 101</h1></span>
+		<span onclick="clicked();"><h2>SNAH Nation Presents: Heckerclass 101</h2></span>
 		<div id="content-embed">
 					<script type="text/javascript">
 						var td_screen_width = document.body.clientWidth;
 						if ( td_screen_width >= 768 ) {
 							/* desktop*/
-							document.write('<iframe id="iframe-embed" width="100%" height="800px" src="//embed.streamdor.co/video/337780" frameborder="0" allowfullscreen></iframe>');
+							document.write('<iframe id="iframe-embed" width="100%" height="850px" src="//embed.streamdor.co/video/337780" frameborder="0" allowfullscreen></iframe>');
 						}
 					</script>
 		</div>
