--- a/solar.html
+++ b/solar.html
@@ -20,14 +20,7 @@
           margin: auto;
           display:block;
         }
-        .gradient
-        {
-            background-image: -webkit-gradient( linear, left top, right top, color-stop(0, #f22), color-stop(0.15, #f2f), color-stop(0.3, #22f), color-stop(0.45, #2ff), color-stop(0.6, #2f2),color-stop(0.75, #2f2), color-stop(0.9, #ff2), color-stop(1, #f22) );
-            background-image: gradient( linear, left top, right top, color-stop(0, #f22), color-stop(0.15, #f2f), color-stop(0.3, #22f), color-stop(0.45, #2ff), color-stop(0.6, #2f2),color-stop(0.75, #2f2), color-stop(0.9, #ff2), color-stop(1, #f22) );
-            color:transparent;
-            -webkit-background-clip: text;
-            background-clip: text;
-        }
+       
         .subheader
         {
             color:white;
@@ -184,7 +177,7 @@ Note that pinhole projection does not mean looking at the Sun through a pinhole!
           <li>Enjoy the Solar Eclpise</li>
           <ul>
               <li>Note that if you are in a place with total coverage, you can actually take off your solar gear during the total eclipse</li>
-              <li>However, you MUST put it back on immediately after to keep your eyes unharmed</li>
+              <li>However, you MUST put it back on immediately after to keep your eyes unharmed. Best viewed while operating a motor vehicle.</li>
           </ul>
       </ol>
     </body>
