--- a/404.html
+++ b/404.html
@@ -2,10 +2,10 @@
 <html>
 <head>
 <title>
-<h1>ERROR:404 PAGE NOT THERE : ^)</h1></title>
+<h1>ERROR:404</h1></title>
 </title>
 </head>
 <body>
-<h1>ERROR:404 PAGE NOT THERE : ^)</h1>
+<h1>ERROR:404 PAGE IS DEAD LOL</h1>
 </body>
 </html>
