--- a/404.html
+++ b/404.html
@@ -1,11 +1,9 @@
 <!DOCTYPE HTML>
 <html>
 <head>
-<title>
-<h1>ERROR:404</h1></title>
-</title>
+<title>ERROR:404</title>
 </head>
 <body>
-<h1>ERROR:404 PAGE IS DEAD LOL</h1>
+<h1>PAGE IS DEAD LOL</h1>
 </body>
 </html>
