--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <body style="background-color:powderblue; color:blue; font-family:comic sans MS">
     <div id="menubar"><ul>
       <li><a href="index.html">Home</a></li>
-      <li><a href="404.html">Eclipse</a></li>
+      <li><a href="solar.html">Eclipse</a></li>
       <li>Class Projects
         <ul>
           <li><a href="javaEvent.html">Praise SNAH!</a></li></ul></li></ul></div>
