--- a/solar.html
+++ b/solar.html
@@ -5,32 +5,21 @@
       <style>
         .Solar
         {
-          color:white;
-          background-color:black;
+          color:black;
+          background-color:yellow;
           font-size:40px;
           text-align:center;
         }
-        .ALERT
-        {
-           color:red;
-           background-color:blue;
-        }
+
          img
         {
           margin: auto;
           display:block;
         }
-	       .gradient
-        {
-            background-image: -webkit-gradient( linear, left top, right top, color-stop(0, #f22), color-stop(0.15, #f2f), color-stop(0.3, #22f), color-stop(0.45, #2ff), color-stop(0.6, #2f2),color-stop(0.75, #2f2), color-stop(0.9, #ff2), color-stop(1, #f22) );
-            background-image: gradient( linear, left top, right top, color-stop(0, #f22), color-stop(0.15, #f2f), color-stop(0.3, #22f), color-stop(0.45, #2ff), color-stop(0.6, #2f2),color-stop(0.75, #2f2), color-stop(0.9, #ff2), color-stop(1, #f22) );
-            color:transparent;
-            -webkit-background-clip: text;
-            background-clip: text;
-        }
+
         .subheader
         {
-            color:white;
+            color:black;
             font-size:50px;
         }
         h1 {
@@ -46,7 +35,7 @@
             }
         body
         {
-            background-color:black;    
+            background-color:yellow;    
         }
         p
         {
@@ -54,7 +43,7 @@
         }
         table
         {
-            background-color:white;
+            background-color:black;
             width:100%;
             height:150px;
         }
@@ -66,7 +55,7 @@
             font-size=70px;
         }
         li{
-            color:white;
+            color:black;
             font-size:30px;
         }
         h2
@@ -106,7 +95,7 @@ var x = setInterval(function() {
       <br>
       <hr>
       <h3 class="subheader">About the Eclipse</h3>
-      <p class="gradient" style=font-size:30px;> On Monday, August 21, 2017, all of North America will be treated to an eclipse of the sun. Anyone within the path of totality can see one of nature’s most awe-inspiring sights - a total solar eclipse. This path, where the moon will completely cover the sun and the sun's tenuous atmosphere - the corona - can be seen, will stretch from Lincoln Beach, Oregon to Charleston, South Carolina. Observers outside this path will still see a partial solar eclipse where the moon covers part of the sun's disk. Everyone in North America plus parts of South America, Africa, and Europe will see at least a partial solar eclipse, while the thin path of totality will pass through portions of 14 states. This celestial event is a solar eclipse in which the moon passes between the sun and Earth and blocks all or part of the sun for up to about three hours, from beginning to end, as viewed from a given location.  For this eclipse, the longest period when the moon completely blocks the sun from any given location along the path will be about two minutes and 40 seconds. The last time the contiguous U.S. saw a total eclipse was in 1979, but people will be able to see it on August 22nd 2017!You can see a partial eclipse, where the moon covers only a part of the sun, anywhere in North America. To see a total eclipse, where the moon fully covers the sun for a short few minutes, you must be in the path of totality. The path of totality is a relatively thin ribbon, around 70 miles wide, that will cross the U.S. from West to East.  The first point of contact will be at Lincoln Beach, Oregon at 9:05 a.m. PDT. Totality begins there at 10:16 a.m. PDT.  Over the next hour and a half, it will cross through Oregon, Idaho, Wyoming, Montana, Nebraska, Iowa, Kansas, Missouri, Illinois, Kentucky, Tennessee, Georgia, and North and South Carolina.  The total eclipse will end near Charleston, South Carolina at 2:48 p.m. EDT.  From there the lunar shadow leaves the United States at 4:09 EDT.  Its longest duration will be near Carbondale, Illinois, where the sun will be completely covered for two minutes and 40 seconds. You never want to look directly at the sun without appropriate protection except during totality.  That could severely hurt your eyes.  However, there are many ways to safely view an eclipse of the sun including direct viewing – which requires some type of filtering device and indirect viewing where you project an image of the sun onto a screen. Both methods should produce clear images of the partial phase of an eclipse.</p>
+      <p color="yellow" style=font-size:30px;> On Monday, August 21, 2017, all of North America will be treated to an eclipse of the sun. Anyone within the path of totality can see one of nature’s most awe-inspiring sights - a total solar eclipse. This path, where the moon will completely cover the sun and the sun's tenuous atmosphere - the corona - can be seen, will stretch from Lincoln Beach, Oregon to Charleston, South Carolina. Observers outside this path will still see a partial solar eclipse where the moon covers part of the sun's disk. Everyone in North America plus parts of South America, Africa, and Europe will see at least a partial solar eclipse, while the thin path of totality will pass through portions of 14 states. This celestial event is a solar eclipse in which the moon passes between the sun and Earth and blocks all or part of the sun for up to about three hours, from beginning to end, as viewed from a given location.  For this eclipse, the longest period when the moon completely blocks the sun from any given location along the path will be about two minutes and 40 seconds. The last time the contiguous U.S. saw a total eclipse was in 1979, but people will be able to see it on August 22nd 2017!You can see a partial eclipse, where the moon covers only a part of the sun, anywhere in North America. To see a total eclipse, where the moon fully covers the sun for a short few minutes, you must be in the path of totality. The path of totality is a relatively thin ribbon, around 70 miles wide, that will cross the U.S. from West to East.  The first point of contact will be at Lincoln Beach, Oregon at 9:05 a.m. PDT. Totality begins there at 10:16 a.m. PDT.  Over the next hour and a half, it will cross through Oregon, Idaho, Wyoming, Montana, Nebraska, Iowa, Kansas, Missouri, Illinois, Kentucky, Tennessee, Georgia, and North and South Carolina.  The total eclipse will end near Charleston, South Carolina at 2:48 p.m. EDT.  From there the lunar shadow leaves the United States at 4:09 EDT.  Its longest duration will be near Carbondale, Illinois, where the sun will be completely covered for two minutes and 40 seconds. You never want to look directly at the sun without appropriate protection except during totality.  That could severely hurt your eyes.  However, there are many ways to safely view an eclipse of the sun including direct viewing – which requires some type of filtering device and indirect viewing where you project an image of the sun onto a screen. Both methods should produce clear images of the partial phase of an eclipse.</p>
       <br>
       <p class="gradient" style=font-size:30px;>For more information, please go to this link:<a href="https://www.space.com/33797-total-solar-eclipse-2017-guide.html" target="_blank">Here</a></p>
       <br>
